[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
hex = "0.4.3"
lazy_static = "1.4.0"
ndarray = "0.15.6"
rayon = "1.6.0"
regex = "1.7.0"
serde_json = "1.0.89"
